Fix for java 11